--- a/taqueria-sdk/package.json
+++ b/taqueria-sdk/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/node-sdk",
-	"version": "0.68.4",
+	"version": "0.68.5",
 	"description": "A TypeScript SDK for NodeJS used for Taqueria plugin development.",
 	"main": "./index.js",
 	"source": "./index.ts",
@@ -37,6 +37,7 @@
 	},
 	"homepage": "https://github.com/tezostaqueria/taqueria#readme",
 	"dependencies": {
+		"@babel/runtime": "^7.27.0",
 		"@taqueria/protocol": "workspace:*",
 		"@taquito/signer": "22.0.0-beta.0",
 		"@taquito/taquito": "22.0.0-beta.0",
@@ -59,7 +60,7 @@
 		"@types/project-name-generator": "^2.1.3",
 		"@types/shell-quote": "^1.7.5",
 		"@types/yargs": "^17.0.32",
-		"tsup": "^8.3.0",
+		"tsup": "^8.4.0",
 		"typescript": "^5.6.2"
 	},
 	"tsup": {
